<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">Example@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--  -->
    <string name="menu_home">主頁</string>
    <string name="menu_tools">工具</string>
    <string name="menu_signin">登入</string>
    <string name="menu_logout">登出</string>
    <!--  -->
    <string name="list">明細</string>
    <string name="report">報表</string>
    <string name="calender">行事曆</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!--  -->
    <string name="name">名稱：</string>
    <string name="type">類別：</string>
    <string name="date">日期：</string>
    <string name="cost">金額：</string>
    <string name="cash">現金</string>
    <string name="credit">信用卡</string>
    <string name="tickets">電子票證</string>
    <string name="payphone">行動支付</string>
    <string name="record">儲存消費紀錄</string>


    //temp
    <string name="signup">註冊</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="plz_input_accout">請輸入帳號</string>
    <string name="plz_input_pw">請輸入密碼</string>
    <string name="register_success">註冊成功</string>
    <string name="logout">登出</string>
    <string name="login_success">登入成功</string>
    <string name="change_name">更改暱稱</string>
    <string name="get_profile">取得 profile</string>
    <string name="display_name">名字</string>
    <string name="photo_uri">圖片網址</string>
    <string name="ok">確定</string>
    <string name="update_data">上傳data</string>
    <string name="change_pw">修改密碼</string>
    <string name="check_email">驗證email</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
